ENH Add anchor for incidents section

--- a/statuspage/template/template.html
+++ b/statuspage/template/template.html
@@ -49,7 +49,7 @@
 					{% endfor %}
 				</ul>
 
-				<h4 data-l10n-id="incidents">Incidents</h4>
+				<h4 data-l10n-id="incidents" id="incidents">Incidents</h4>
 				{% if incidents %}
 					{% for incident in incidents %}
 					<div class="incident">
